# contextkit

./: .gitignore  LICENSE  PROMOTION.md  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: __init__.py  benchmark.py
examples/: quickstart.py  with_claude_code.py  with_openai.py
mcp_config/: cursor.json
src/contextkit/: __init__.py  __main__.py  budget.py  cli.py  compressor.py  core.py  indexer.py  mcp_server.py
tests/: test_contextkit.py
