[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contextkit"
version = "0.1.0"
description = "The Swiss Army knife for AI agent context management. Smart compression, vector indexing, on-demand loading, and cross-session memory."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "ContextKit Contributors" },
]
keywords = [
    "ai",
    "agent",
    "context",
    "llm",
    "openai",
    "langchain",
    "memory",
    "embedding",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "openai>=1.0.0",
    "tiktoken>=0.5.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/your-username/contextkit"
Repository = "https://github.com/your-username/contextkit"
Issues = "https://github.com/your-username/contextkit/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/contextkit"]
