[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contextkit"
version = "0.2.0"
description = "The missing context layer for AI agents — smart compression, semantic search, token budgeting, and MCP server."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "ContextKit Contributors" },
]
keywords = [
    "ai",
    "agent",
    "context",
    "llm",
    "mcp",
    "openai",
    "langchain",
    "memory",
    "embedding",
    "context-window",
    "token-budget",
    "compression",
    "semantic-search",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "tiktoken>=0.5.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
llm = [
    "openai>=1.0.0",
]
mcp = [
    "mcp>=1.0.0",
]
all = [
    "openai>=1.0.0",
    "mcp>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
contextkit = "contextkit.cli:main"

[project.urls]
Homepage = "https://github.com/seastarbot/contextkit"
Repository = "https://github.com/seastarbot/contextkit"
Issues = "https://github.com/seastarbot/contextkit/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/contextkit"]
